--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ nav{
 
 /* main banner */
 .main-banner{
-    background-image: url("./assets/mainbanner.png");
+    background-image: url("assets/mainbanner.png");
     padding: 10rem 0;
     background-size: cover;
     background-position: center;
